--- a/Wind/Wind.vcxproj
+++ b/Wind/Wind.vcxproj
@@ -132,23 +132,31 @@
     <ClCompile Include="Blossom.cpp" />
     <ClCompile Include="Camera.cpp" />
     <ClCompile Include="Cannon.cpp" />
+    <ClCompile Include="CollisionHandler.cpp" />
     <ClCompile Include="Engine.cpp" />
     <ClCompile Include="GameEntity.cpp" />
     <ClCompile Include="Ground.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Seed.cpp" />
     <ClCompile Include="SFMLDebugDraw.cpp" />
+    <ClCompile Include="Tree.cpp" />
+    <ClCompile Include="UIObject.cpp" />
+    <ClCompile Include="UIProgressBar.cpp" />
     <ClCompile Include="Wind.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Blossom.h" />
     <ClInclude Include="Camera.h" />
     <ClInclude Include="Cannon.h" />
+    <ClInclude Include="CollisionHandler.h" />
     <ClInclude Include="Engine.h" />
     <ClInclude Include="GameEntity.h" />
     <ClInclude Include="Ground.h" />
     <ClInclude Include="Seed.h" />
     <ClInclude Include="SFMLDebugDraw.h" />
+    <ClInclude Include="Tree.h" />
+    <ClInclude Include="UIObject.h" />
+    <ClInclude Include="UIProgressBar.h" />
     <ClInclude Include="Utility.h" />
     <ClInclude Include="Wind.h" />
   </ItemGroup>
