--- a/Wind/Wind.vcxproj.filters
+++ b/Wind/Wind.vcxproj.filters
@@ -45,9 +45,6 @@
     <ClCompile Include="Seed.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Blossom.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="UIObject.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -58,6 +55,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Tree.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Particle.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -89,9 +89,6 @@
     <ClInclude Include="Seed.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Blossom.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="UIObject.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -102,6 +99,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Tree.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Particle.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
